Edit image styles to avoid stretching

--- a/css/slider.css
+++ b/css/slider.css
@@ -35,6 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgba(0,0,0,0.2);
 }
 
 .slide-box {
@@ -61,12 +62,17 @@
 
 .slide-img {
   width: 100%;
-  min-height: 100%;
+  /* max-height: 100%; */
+  /* object-fit: cover */
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+}
+
+img.slide-img {
+  object-fit: cover;
 }
 
 .slide-video {
@@ -254,6 +260,17 @@
   .slideshow-toggle {
     display: none;
   }
+
+  .slider-arrow {
+    position: absolute;
+    width: 2rem;
+    background: rgba(0, 0, 0, 0.3);
+  }
+  
+  .slider-arrow:hover {
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+  }
 }
 
 /* Tablet (Slider) */
@@ -295,5 +312,20 @@
   
   .slideshow-toggle {
     display: none;
+  }
+  
+  .slider-arrow {
+    position: absolute;
+    width: 2rem;
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  .slider-arrow i {
+    font-size: 1.3rem;
+  }
+  
+  .slider-arrow:hover {
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
   }
 }
